# cmake_grpc_linux_cpp

client/: .gitignore  README.md  build.sh  game.py
data/schema/: first.proto  game.proto
server/: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
server/src/: GameServer.cpp  GameServer.hpp  main.cpp
